--- a/app/src/main/res/anim/slide_out_down.xml
+++ b/app/src/main/res/anim/slide_out_down.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
+<transitionSet xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="700">
-    <translate
-        android:fromYDelta="0%p"
-        android:toYDelta="100%p" />
-</set>
+    <slide android:slideEdge="bottom"/> </transitionSet>
