--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="?attr/colorSurface"
     tools:context=".MainActivity">
 
     <ImageView
@@ -13,15 +13,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/profile_placeholder" android:transitionName="NO_TRANSITION" tools:ignore="ContentDescription" />
+        android:src="@drawable/profile_placeholder"
+        android:transitionName="NO_TRANSITION"
+        tools:ignore="ContentDescription" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="16dp"
-        android:background="#10000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="-26dp" />
+        android:background="#4D000000"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <ImageView
+        android:id="@+id/theme_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="32dp"
+        android:clickable="true"
+        android:contentDescription="Toggle Dark Mode"
+        android:focusable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white"
+        tools:src="@drawable/ic_moon" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -39,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello I am"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
         <TextView
@@ -47,7 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nama_lengkap"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             android:textSize="32sp"
             android:textStyle="bold"
             android:layout_marginTop="8dp" />
@@ -57,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/posisi"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             android:textSize="20sp"
             android:layout_marginTop="4dp" />
 
@@ -66,8 +80,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Show Me"
-            android:textColor="@android:color/black"
-            android:backgroundTint="@android:color/white"
+            android:textColor="?attr/colorOnPrimary"
+            android:backgroundTint="?attr/colorPrimary"
             android:paddingStart="24dp"
             android:paddingEnd="24dp"
             android:layout_marginTop="32dp" />
