--- a/app/src/main/res/layout/bottom_sheet_profile_selection.xml
+++ b/app/src/main/res/layout/bottom_sheet_profile_selection.xml
@@ -5,16 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_top_corner_white_bg"
-    android:paddingTop="32dp"
-    android:paddingBottom="40dp"   tools:context=".ProfileSelectionBottomSheet">
+    android:background="@drawable/bg_bottom_sheet_rounded"
+    android:paddingTop="20dp"
+    android:paddingBottom="10dp"   tools:context=".ProfileSelectionBottomSheet">
+
 
     <TextView
         android:id="@+id/name_text_selection_white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nama_lengkap"
-        android:textColor="@android:color/black"
+        android:textColor="?attr/colorOnSurface"
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_marginTop="32dp"
@@ -27,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/posisi"
-        android:textColor="@android:color/darker_gray"
+        android:textColor="?attr/colorOnSurfaceVariant"
         android:textSize="16sp"
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@id/name_text_selection_white"
@@ -46,22 +47,22 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
-            android:id="@+id/icon_linkedin"
+            android:id="@+id/icon_facebook"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/ic_linkedin"
-            android:tint="@android:color/black"
+            android:src="@drawable/icon_facebook"
+            app:tint="?attr/colorOnSurface"
             android:layout_marginEnd="16dp"
             android:clickable="true"
             android:focusable="true"
-            android:contentDescription="LinkedIn" />
+            android:contentDescription="facebook" />
 
         <ImageView
             android:id="@+id/icon_github"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/ic_github"
-            android:tint="@android:color/black"
+            android:src="@drawable/icon_github"
+            app:tint="?attr/colorOnSurface"
             android:layout_marginEnd="16dp"
             android:clickable="true"
             android:focusable="true"
@@ -71,8 +72,8 @@
             android:id="@+id/icon_instagram"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/ic_instagram"
-            android:tint="@android:color/black"
+            android:src="@drawable/icon_instagram"
+            app:tint="?attr/colorOnSurface"
             android:layout_marginEnd="16dp"
             android:clickable="true"
             android:focusable="true"
@@ -82,8 +83,8 @@
             android:id="@+id/icon_twitter"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/ic_twitter"
-            android:tint="@android:color/black"
+            android:src="@drawable/icon_twitter"
+            app:tint="?attr/colorOnSurface"
             android:clickable="true"
             android:focusable="true"
             android:contentDescription="Twitter" />
@@ -94,14 +95,17 @@
         android:id="@+id/recycler_view_categories_white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
         android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@id/social_media_layout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingTop="10dp"
+        android:paddingBottom="20dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/social_media_layout"
+        app:layout_constraintVertical_bias="0.0"
+        app:spanCount="2"
         tools:listitem="@layout/item_category" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
