--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Base.Theme.MyProfile" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:windowActivityTransitions">true</item>
+    <style name="Theme.MyProfile" parent="Theme.Material3.Dark.NoActionBar">
 
-        <item name="android:windowIsTranslucent">false</item>
-        <item name="android:windowBackground">@android:color/black</item>
-        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowLightStatusBar">false</item>
 
-        <item name="android:windowEnterTransition">@anim/slide_in_up</item>
-        <item name="android:windowExitTransition">@anim/fade_out_activity</item>
-        <item name="android:windowReenterTransition">@anim/fade_in_activity</item>
-        <item name="android:windowReturnTransition">@anim/slide_out_down</item>
     </style>
-
-    <style name="Theme.MyProfile" parent="Base.Theme.MyProfile" />
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">?attr/colorSurface</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher</item>
+        <item name="postSplashScreenTheme">@style/Theme.MyProfile</item>
+    </style>
 </resources>
